CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT("CS370 Final FUSE")

ADD_SUBDIRECTORY(libchaos)

FIND_PACKAGE(PkgConfig REQUIRED)
pkg_search_module(FUSE3 REQUIRED fuse3)

SET(RuleFS_SOURCES
    rulefs.c
)

SET(TreeFS_SOURCES
    treefs.c
)

ADD_EXECUTABLE(rulefs ${RuleFS_SOURCES})
TARGET_LINK_LIBRARIES(rulefs ${FUSE3_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(rulefs PUBLIC ${FUSE3_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(rulefs PUBLIC ${FUSE3_CGLAGS_OTHER})

ADD_EXECUTABLE(treefs ${TreeFS_SOURCES})
TARGET_LINK_LIBRARIES(treefs ${FUSE3_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(treefs PUBLIC ${FUSE3_INCLUDE_DIRS})
TARGET_COMPILE_OPTIONS(treefs PUBLIC ${FUSE3_CGLAGS_OTHER})


#LibChaos_Configure_Target(rulefs)
